--- a/Gallery.html
+++ b/Gallery.html
@@ -171,7 +171,7 @@
 						$(".portfolio-item").show();
 
 						//filter
-						$(".portfolio-item").forEach(function(product){
+						$(".portfolio-item").each(function(index, product){
 							let firstLine = product.getElementsByTagName("h4")[0].innerHTML;
 							let secondLine = product.getElementsByClassName("product-second-line")[0].innerHTML;
 							let thirdLine = product.getElementsByClassName("product-third-line")[0].innerHTML;
