--- a/Gallery.html
+++ b/Gallery.html
@@ -168,7 +168,7 @@
 				switch (type) {
 					case "paintings":
 						//show all 
-						$(".portfolio-item").show();
+						$(".portfolio-item").show("slow");
 
 						//filter
 						$(".portfolio-item").each(function(index, product){
