Implement search for all items sculpture frontent: show medium

--- a/Gallery.html
+++ b/Gallery.html
@@ -126,8 +126,8 @@
 						thirdLine = product.medium;
 						urlString = URLBuilder.paintingsThumbnailURL(product.artist);
 					} else if (type === "sculptures") {
-						secondLine = product.name;
-						thirdLine = product.artist;
+						secondLine = product.artist;
+						thirdLine = product.medium;
 						urlString = URLBuilder.sculpturesThumbnailURL(product.artist);
 					} else if (type === "shawls") {
 						secondLine = product.type;
