--- a/artist.html
+++ b/artist.html
@@ -156,7 +156,7 @@
 					$("#artistList").empty();
 					data.forEach(element => {
 						$("#artistList").append(`
-						<div class="col-lg-4 col-md-6">
+						<div class="col-lg-4 col-md-6" style="height: 50px;">
 							<div class="member">
 								<div class="pic">
 									<a href="artistdetail.html?artist=${element.artist}">${element.artist}</a>
@@ -168,6 +168,9 @@
 				}
 			});
 		}
+
+
+		populateArtists();
 	</script>
 </body>
 
