--- a/artistdetail.html
+++ b/artistdetail.html
@@ -93,36 +93,8 @@
 					<h3 class="section-title" style="text-decoration-line:underline">Artworks</h3>
 
 				</div>
-				<div class="row">
-					<div class="col-lg-4 col-md-6">
-						<div class="member">
-							<div class="pic"><img
-									src="img/M-F-Husain-Title-Culture-of-the-streets-Water-colour-on-paper-15X22-inches-Year-1982-2.png"
-									alt=""></div>
-
-						</div>
-					</div>
-
-					<div class="col-lg-8 col-md-6">
-						<div class="member">
-							<div class="pic"><img src="img/prakriti_-_1800x1200-02@2x.png" alt=""></div>
-
-						</div>
-					</div>
-
-					<div class="col-lg-3 col-md-6">
-						<div class="member">
-							<div class="pic"><img src="img/Azimi-1-030818.png" alt=""></div>
-
-						</div>
-					</div>
-
-					<div class="col-lg-8 col-md-6">
-						<div class="member">
-							<div class="pic"><img src="img/polarite_-_1800x1200-02.png" alt=""></div>
-						</div>
-					</div>
-				</div>
+				<div class="row" id="artistArtworks">
+					
 
 			</div>
 		</section>
