change data id to item_number which is unique remove extra info from artistArtworks

--- a/Gallery.html
+++ b/Gallery.html
@@ -147,7 +147,7 @@
 					productsList.append(`
 						<div class="col-lg-4 col-md-6 portfolio-item filter-app">
 
-							<img src="${urlString}/${product.thumbnail}" alt="" data-id="${product.id}">
+							<img src="${urlString}/${product.thumbnail}" alt="" data-id="${product.item_number}">
 
 							<div style="text-align: center;">
 								<h4>${firstLine.toLowerCase()}</h4>
