display data about paintings display artist name

--- a/artistdetail.html
+++ b/artistdetail.html
@@ -47,15 +47,11 @@
 
 				<div class="row" id="portfolio-wrapper">
 					<div class="col-lg-8 col-md-6 portfolio-item filter-app">
-
 						<img src="img/C1100-throwbackthursday-s-h-raza-1216.png" alt="">
 					</div>
-
-
 					<div class="col-lg-4 col-md-6 portfolio-item filter-web">
-
 						<div style="text-align: left;margin-top:-25px;">
-							<h2><b>Syed Haider Raza</b></h2>
+							<h2 id="artistName"><b>Syed Haider Raza</b></h2>
 							<span><b>22 February 1922-25th July 2019</b></span><br />
 							<br /><br />
 							<p>
@@ -73,17 +69,9 @@
 								dictum non consectetur a erat. Maecenas accumsan lacus vel facilisis volutpat est.
 							</p>
 							<span><b>Read more</b></span>
-
-
 						</div>
-
 					</div>
-
-
-
 				</div>
-
-
 			</div>
 		</section>
 
