--- a/Gallery.html
+++ b/Gallery.html
@@ -78,7 +78,7 @@
 	<script>
 		getProductsFromDatabase();
 		$("#portfolio-wrapper").on('click', "img", function () {
-			window.location = `product.html?id=${$(this).attr("data-id")}`;
+			window.location = `${$(this).attr("data-url")}`;
 
 		});
 		var slideIndex = 1;
@@ -124,6 +124,7 @@
 					var firstLine = product.name;
 					var secondLine, thirdLine;
 					var urlString;
+					var productURL = "product.html?id=" + product.item_number;
 					if (type === "paintings") {
 						secondLine = product.artist;
 						thirdLine = product.medium;
@@ -148,6 +149,7 @@
 						urlString = URLBuilder.artistsThumbnailURL();
 						secondLine = "";
 						thirdLine = "";
+						productURL = "artistdetail.html?artist=" + product.name;
 					}
 
 					console.log(firstLine);
@@ -156,7 +158,7 @@
 					productsList.append(`
 						<div class="col-lg-4 col-md-6 portfolio-item filter-app">
 
-							<img src="${urlString}/${product.thumbnail}" alt="" data-id="${product.item_number}">
+							<img src="${urlString}/${product.thumbnail}" alt="" data-url="${productURL}">
 
 							<div style="text-align: center;">
 								<h4>${firstLine.toLowerCase()}</h4>
@@ -168,9 +170,6 @@
 				});
 			});
 		}
-
-		
-
 	</script>
 </body>
 
