--- a/Gallery.html
+++ b/Gallery.html
@@ -43,11 +43,11 @@
 				</div>
 				<div class="row">
 
-					<div class="col-lg-12">
-						<h5><b>Filter by:</b></h5>
-						<ul id="portfolio-flters">
-							<li data-filter=".filter-card">Artist</li>
-							<li data-filter=".filter-web">Medium</li>
+					<div class="col-lg-12" id="portfolio-sortcontrol">
+						<h5><b>Sort by:</b></h5>
+						<ul id="portfolio-sortmethods">
+							<li>Artist</li>
+							<li>Medium</li>
 						</ul>
 					</div>
 				</div>
