--- a/Gallery.html
+++ b/Gallery.html
@@ -139,7 +139,7 @@
 						secondLine = product.artist;
 						thirdLine = product.medium;
 						urlString = URLBuilder.paintingsThumbnailURL(product.artist);
-						$("#portfolio-methods").append(`
+						$("#portfolio-sortmethods").append(`
 							<li>Artist</li>
 							<li>Name</li>
 							<li>Medium</li>
@@ -149,7 +149,7 @@
 						secondLine = product.artist;
 						thirdLine = product.medium;
 						urlString = URLBuilder.sculpturesThumbnailURL(product.artist);
-						$("#portfolio-methods").append(`
+						$("#portfolio-sortmethods").append(`
 							<li>Artist</li>
 							<li>Name</li>
 							<li>Medium</li>
@@ -159,7 +159,7 @@
 						secondLine = product.type;
 						thirdLine = product.gender;
 						urlString = URLBuilder.shawlsThumbnailURL();
-						$("#portfolio-methods").append(`
+						$("#portfolio-sortmethods").append(`
 							<li>Name</li>
 							<li>Type</li>
 						`);
@@ -168,7 +168,7 @@
 						secondLine = product.type;
 						thirdLine = product.origin;
 						urlString = URLBuilder.carpetsThumbnailURL();
-						$("#portfolio-methods").append(`
+						$("#portfolio-sortmethods").append(`
 							<li>Name</li>
 							<li>Type</li>
 						`);
