--- a/Gallery.html
+++ b/Gallery.html
@@ -113,12 +113,11 @@
 		}
 
 		function getProductsFromDatabase(searchQ, sort) {
-			if (searchQ == undefined)
-			{
+			if (searchQ == undefined) {
 				searchQ = "";
 				globalThis.productSearchFilter = undefined;
 			}
-			else 
+			else
 				globalThis.productSearchFilter = searchQ;
 			if (sort == undefined)
 				sort = "";
@@ -130,6 +129,44 @@
 				console.log(data);
 				var productsList = $("#portfolio-wrapper");
 				productsList.empty();
+
+				//fill sort options
+				switch (type) {
+					case "paintings":
+						$("#portfolio-sortmethods").append(`
+							<li>Artist</li>
+							<li>Name</li>
+							<li>Medium</li>
+						`);
+						break;
+
+					case "carpets":
+						$("#portfolio-sortmethods").append(`
+							<li>Name</li>
+							<li>Type</li>
+						`);
+						break;
+
+					case "shawls":
+						$("#portfolio-sortmethods").append(`
+							<li>Name</li>
+							<li>Type</li>
+						`);
+						break;
+					case "sculptures":
+						$("#portfolio-sortmethods").append(`
+							<li>Artist</li>
+							<li>Name</li>
+							<li>Medium</li>
+						`);
+						break;
+					case "artists":
+						//no sorting options
+						$("#portfolio-sortcontrol").hide();
+						break;
+				}
+
+				//fill contents
 				data.forEach(function (product) {
 					var firstLine = product.name;
 					var secondLine, thirdLine;
@@ -139,39 +176,21 @@
 						secondLine = product.artist;
 						thirdLine = product.medium;
 						urlString = URLBuilder.paintingsThumbnailURL(product.artist);
-						$("#portfolio-sortmethods").append(`
-							<li>Artist</li>
-							<li>Name</li>
-							<li>Medium</li>
-						`);
 					}
 					else if (type === "sculptures") {
 						secondLine = product.artist;
 						thirdLine = product.medium;
 						urlString = URLBuilder.sculpturesThumbnailURL(product.artist);
-						$("#portfolio-sortmethods").append(`
-							<li>Artist</li>
-							<li>Name</li>
-							<li>Medium</li>
-						`);
 					}
 					else if (type === "shawls") {
 						secondLine = product.type;
 						thirdLine = product.gender;
 						urlString = URLBuilder.shawlsThumbnailURL();
-						$("#portfolio-sortmethods").append(`
-							<li>Name</li>
-							<li>Type</li>
-						`);
 					}
 					else if (type === "carpets") {
 						secondLine = product.type;
 						thirdLine = product.origin;
 						urlString = URLBuilder.carpetsThumbnailURL();
-						$("#portfolio-sortmethods").append(`
-							<li>Name</li>
-							<li>Type</li>
-						`);
 					}
 					else if (type == "artists") {
 						urlString = URLBuilder.artistsThumbnailURL();
