--- a/product.html
+++ b/product.html
@@ -280,6 +280,32 @@
 					$("#portfolio-wrapper").show('slow');
 				});
 			}
+			else if (item_number.match(/^S/)) {
+				//shawls
+
+				//fetch shawl
+				$.get(new URLBuilder().api().child("shawls.php").urlString + `?item_number=${item_number}`, (dataReceived)=>{
+					let data = dataReceived[0];
+
+					$("#product-thumbnail").attr("src", URLBuilder.shawlsURL().urlString + `/${data.thumbnail}`);
+					$("#product-details").append(`<h2><b>${data.name}</b><h2>`);
+					$("#product-details").append(`
+						<span style="color:lightgray;font-size:18px;">Dimensions: ${data.size}</span><br />
+					`);
+					$("#product-details").append(`
+						<span style="color:lightgray;font-size:18px;">Type: ${data.type}</span><br />
+					`);
+					$("#product-details").append(`
+						<span style="color:lightgray;font-size:18px;">Colour: ${data.colour}</span><br />
+					`);
+					$("#product-details").append(`
+						<span style="color:lightgray;font-size:18px;">Gender: ${data.gender}</span><br />
+					`);
+
+
+					$("#portfolio-wrapper").show('slow');
+				});
+			}
 			else if (item_number.match(/^C/)) {
 				//carpets
 
@@ -287,7 +313,7 @@
 				$.get(new URLBuilder().api().child("carpets.php").urlString + `?item_number=${item_number}`, (dataReceived)=>{
 					let data = dataReceived[0];
 
-					$("#product-thumbnail").attr("src", new URLBuilder().raw().photos().paintings(data.artist).urlString + `/${data.thumbnail}`);
+					$("#product-thumbnail").attr("src", URLBuilder.carpetsURL().urlString + `/${data.thumbnail}`);
 					$("#product-details").append(`<h2><b>${data.name}</b><h2>`);
 					$("#product-details").append(`
 						<span style="color:lightgray;font-size:18px;">Dimensions: ${data.size}</span><br />
