--- a/index.html
+++ b/index.html
@@ -346,9 +346,11 @@
 				for (var i = 0; i < data.length; i++) {
 					var painting = data[i];
 					var imageBaseURL = URLBuilder.paintingsURL(painting.artist);
+					var imageURL = `${imageBaseURL}/${painting.thumbnail}`;
+					imageURL.replace(" ", "%20");
 					slides.append(`
 					<div class="item ${i == 0 ? "active" : ""}">
-						<div class="backgroundImg" style="background: url(${imageBaseURL}/${painting.thumbnail}) top center;">
+						<div class="backgroundImg" style="background: url() top center; background-size: cover;">
 						</div>
 						<div class="carousel-text">
 							<h2><b>${painting.name}</b></h2>
