URL empty bug fix

--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
 					imageURL.replace(" ", "%20");
 					slides.append(`
 					<div class="item ${i == 0 ? "active" : ""}">
-						<div class="backgroundImg" style="background: url() top center; background-size: cover;">
+						<div class="backgroundImg" style="background: url(${imageURL}) top center; background-size: cover;">
 						</div>
 						<div class="carousel-text">
 							<h2><b>${painting.name}</b></h2>
