--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 	<section id="hero">
 		<div class="hero-container">
-			<div id="myCarousel" class="carousel slide" data-ride="carousel">
+			<div id="myCarousel" class="carousel slide" data-ride="carousel" data-touch="true">
 				<!-- Indicators -->
 				<ol class="carousel-indicators">
 				</ol>
