--- a/Gallery.html
+++ b/Gallery.html
@@ -163,7 +163,7 @@
 					}
 					
 					productsList.append(`
-						<div class="col-lg-4 col-md-6 portfolio-item filter-app">
+						<div class="col-lg-4 col-md-6 col-sm-6 portfolio-item filter-app">
 
 							<img src="${urlString}/${product.thumbnail}" alt="" data-url="${productURL}">
 
