--- a/index.html
+++ b/index.html
@@ -306,8 +306,10 @@
 	<script src="lib/superfish/hoverIntent.js"></script>
 	<script src="lib/superfish/superfish.min.js"></script>
 	<script src="contactform/contactform.js"></script>
+	<script src="js/jquery.bcSwipe.js"></script>
 	<script src="js/main.js"></script>
 	<script>
+
 		var slideIndex = 1;
 		showDivs(slideIndex);
 
