--- a/product.html
+++ b/product.html
@@ -250,7 +250,7 @@
 
 					//other works
 					$.get("api/paintings.php?artist="+data.artist, (works)=>{
-						data.forEach(element => {
+						works.forEach(element => {
 							if (works.item_number != item_number) {
 								$("#team-otherworks").append(`
 								<div class="col-lg-4 col-md-6">
