Add placeholder images

--- a/product.html
+++ b/product.html
@@ -48,7 +48,7 @@
 				<div class="row" id="portfolio-wrapper">
 					<div class="col-lg-8 col-md-6 portfolio-item filter-app">
 
-						<img id="product-thumbnail" src="img/mf-hussain3.png" alt="">
+						<img id="product-thumbnail" src="img/placeholder.jpg" alt="">
 					</div>
 
 
@@ -152,7 +152,7 @@
 				<div class="modal-body">
 					<div style="text-align: center">
 						<h6><b>To: Masha Arts and handicrafts</b></h6>
-						<img id="product-modal-thumbnail" src="img/mf-hussain3.png" alt="" style="width:95px;">
+						<img id="product-modal-thumbnail" src="img/placeholder.jpg" alt="" style="width:95px;">
 						<h6><b id = "product-modal-name">M F Hussain</b></h6>
 						<div id="product-modal-details"></div>
 						<br />
